--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 					<td>Data</td>
 					<td>Dia/sem</td>
 					<td>F</td>
+					<td>Entrada</td>
 					<td>Intevalo descanco</td>
 					<td>Saida</td>
 					<td>Atividade</td>
@@ -93,6 +94,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>02</td>
@@ -101,6 +103,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -113,6 +116,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>04</td>
@@ -123,6 +127,7 @@
 					<td>-</td>	
 					<td>-</td>
 					<td>-</td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>05</td>
@@ -131,6 +136,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -143,6 +149,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>07</td>
@@ -151,6 +158,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -163,6 +171,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>09</td>
@@ -171,6 +180,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -183,6 +193,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>11</td>
@@ -193,6 +204,7 @@
 					<td>-</td>	
 					<td>-</td>
 					<td>-</td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>12</td>
@@ -201,6 +213,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -213,6 +226,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>14</td>
@@ -221,6 +235,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -233,6 +248,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>16</td>
@@ -241,6 +257,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -253,6 +270,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>18</td>
@@ -263,6 +281,7 @@
 					<td>-</td>	
 					<td>-</td>
 					<td>-</td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>19</td>
@@ -271,6 +290,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -283,14 +303,16 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>21</td>
 					<td>QUA</td>
 					<td></td>
 					<td>10:00</td>
-					<td>12:12</td>
-					<td>13:12</td>	
+					<td>12:12 - 13:12</td>
+					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -303,6 +325,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>23</td>
@@ -311,6 +334,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -323,6 +347,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>25</td>
@@ -333,6 +358,7 @@
 					<td>-</td>	
 					<td>-</td>
 					<td>-</td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>26</td>
@@ -341,6 +367,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -353,6 +380,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>28</td>
@@ -361,6 +389,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -373,6 +402,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>30</td>
@@ -383,6 +413,7 @@
 					<td></td>	
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr class="numeros2">
 					<td>31</td>
@@ -391,6 +422,7 @@
 					<td></td>
 					<td></td>
 					<td></td>	
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
